<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/CVprincipal"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/fotoCV"

            />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BotonLikeCV"
                android:src="@drawable/hueso_blanco"

                android:background="@color/colorBlanco"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nombreCV"
                android:text="@string/nombreCV"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/TextoBlandoCV"
                android:text="@string/espacioBlancoCV"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numLikesCV"
                android:text="@string/numLikesCV"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/huesoAmarilloCV"
                android:src="@drawable/hueso_amarillo"
                />

        </LinearLayout>



    </LinearLayout>
</android.support.v7.widget.CardView>
